# OpenRadioss

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  EXTLIB_VERSION.json  HOWTO.md  INSTALL.md  LICENSE.md  README.md  RELEASES.md  SECURITY.md  Stable_code.md  Test_case1  build_windows.bat  fake_file  scripts.tar  tensile_LAW2_0000.rad  tensile_LAW2_0001.rad  tensile_LAW2_BIQUAD_0000.rad  tensile_LAW2_BIQUAD_0001.rad  test.yml  toto
qa-tests/: CMakeLists.txt  test_script.bash  test_script.bat
qa-tests/qa_tools/: constants.json  execute_solver.py  miniqa.txt  or_execute.py  qa_system.py  verify_results.py
qa-tests/scripts/: fouine.sh  or_QA.constants  or_QA.files_1miniqa  or_QA.files_all  or_generate_ctest.py  or_qa_script  or_qa_timeout.pl  or_radioss.pl  or_run_test.py
qa-tests/scripts/Sandbox.last_qa_files/: p4_files
reader/: CMakeLists.txt  build_script.bash  build_windows.bat
reader/CMake_arch/: CMake_includes.cmake  CMake_linux64.cmake  CMake_linuxa64.cmake  CMake_win64.cmake
reader/source/cfgio/: CMakeLists.txt
reader/source/cfgkernel/: CMakeLists.txt
reader/source/dyna2rad/: CMakeLists.txt  convertbcs.h  convertboxes.h  convertcards.h  convertconstrainedinterpolations.h  convertdampings.h  convertdefinehexspotweldassembly.h  convertelementmasses.h  convertelements.h  convertentities.h  convertinitialaxialforces.h  convertinitialstrains.h  convertinitialstresses.h  convertloads.h  convertnodes.h  convertnodetransforms.h  convertperturbations.h  convertprops.h  convertrwalls.h  convertsets.h  dyna2rad.h  dynamatlawkeywordmap.h  propertymaterialrelation.h  sdiUtils.h  unitsystemdefaults.h
reader/source/io/: CMakeLists.txt
reader/source/sdi/: CMakeLists.txt
reader/source/solver_interface/: CMakeLists.txt
starter/: CMakeLists.txt  build_script.sh  build_windows.bat
starter/CMake_Compilers/: cmake_linux64_AOCC.txt  cmake_linux64_AOCC_compilers.sh  cmake_linux64_AOCC_compilers.txt  cmake_linux64_gf.txt  cmake_linux64_gf12.txt  cmake_linux64_gf_compilers.sh  cmake_linux64_gf_compilers.txt  cmake_linux64_ifort.txt  cmake_linux64_ifx.txt  cmake_linux64_intel.txt  cmake_linux64_intel_compilers.txt  cmake_linux64_intel_ifx.txt  cmake_linux64_nv.txt  cmake_linux64_nv_compilers.sh  cmake_linuxa64.txt  cmake_linuxa64_compilers.sh  cmake_linuxa64_compilers.txt  cmake_linuxa64_gf.txt  cmake_win64.txt  cmake_win64_compilers.bat  cmake_win64_compilers.sh  cmake_win64_compilers.txt  cmake_win64_ifort.txt  cmake_win64_ifort_compilers.sh  cmake_win64_ifx.txt  cmake_win64_ifx_compilers.sh  cmake_win64_sse3.txt  legacy_fortran.cmake  platforms.txt
starter/CMake_Compilers_v2/: README.md  cmake_linux64_AOCC.cmake  cmake_linux64_gf.cmake  cmake_linux64_ifort.cmake  cmake_linux64_ifx.cmake  cmake_linux64_nv.cmake  cmake_linuxa64.cmake  cmake_linuxa64_gf.cmake  cmake_win64.cmake  cmake_win64_ifort.cmake  cmake_win64_sse3.cmake  legacy_fortran.cmake  platforms.txt
starter/CMake_Compilers_v2/common/: flags_reset_full.cmake  flags_reset_minimal.cmake  libs_linux64.cmake  libs_linuxa64.cmake  libs_win64.cmake  mkl.cmake  module_dir.cmake  no_python.cmake  precision.cmake  reader_linux64.cmake  reader_linuxa64.cmake  reader_win64.cmake
starter/CMake_Compilers_v2/compiler/: aocc_linux.cmake  armflang_linuxa64.cmake  gfortran_linux.cmake  intel_linux.cmake  intel_win64.cmake  nvhpc_linux.cmake
starter/share/c_inc/: analyse.h  analyse_GUI.h  analyse_check.h  analyse_comment.h  analyse_define.h  analyse_error.h  analyse_file.h  analyse_fill_info.h  analyse_getall.h  analyse_memory.h  analyse_name.inc  analyse_node.h  analyse_part.h  analyse_portage.h  analyse_print.h  analyse_read_tools.h  analyse_string.h  analyse_structure.h  userlib.h
starter/share/includes/: alefvm.inc  alemuscl.inc  altdoctag.inc  ascchr_c.inc  assert.inc  boltpr_c.inc  bucki_c.inc  buckr_c.inc  checksum_list.h  checksum_model.h  checksum_output_files.h  chrasc_c.inc  com01_c.inc  com02_c.2.inc  com02_c.inc  com03_c.2.inc  com03_c.inc  com04_c.inc  com05_c.inc  com06_c.inc  com07_c.inc  com08_c.inc  com09_c.inc  com10_c.inc  com_engcards_c.inc  com_xfem1.inc  commandline.inc  conv_c.inc  couple_c.inc  ddspmd_c.inc  debug_rst.inc  drape_c.inc  dyn_userlib.h  eigcom.inc  elbuf_c.inc  execinp.inc  flowcom.inc  fluid_scr_c.inc  fxbcom.inc  hash_id.inc  (+72 more)
starter/share/message_module/: inter_ancmsg_mod.F  message_mod.F  message_mod2.F
starter/share/modules1/: adinertia_mod.F90  bpreload_mod.F  cluster_mod.F  ddweights_mod.F  detonators_mod.F  dichotomy_mod.F  drape_mod.F  dsgraph_mod.F  elbuftag_mod.F  elbuftag_mod.mod  format_mod.F90  front_mod.F  func2d_mod.F  fvbag_mod.F  group_mod.F  grp_size_mod.F  hm_current_option_mod.F  hm_option_read_mod.F  i25_fie_mod.F  i710split_mod.F  inigrav_mod.F  inimap1d_mod.F  inimap2d_mod.F  inivol_mod.F  intbuf_fric_mod.F  inter_cand_mod.F  intstamp_glob_mod.F  intstamp_mod.F  inverted_group_mod.F  joint_mod.F  merge_mod.F  mid_pid_mod.F  monvol_struct_mod.F  nod2el_mod.F  options_mod.F  plyxfem_mod.F  r2r_mod.F  random_mod.F  reader_old_mod.F90  realloc_mod.F  (+19 more)
starter/share/r4/: my_real.inc  r4r8_p.inc  real_f.inc
starter/share/r8/: r4r8_p.inc  real_f.inc
starter/share/spe_inc/: archloops.inc  atomend.inc  atomic.inc  c_header.inc  comlock.inc  constant.inc  hardware.inc  hstp.h  implicit_f.inc  lockoff.inc  lockon.inc  machine.inc  mvsiz_p.inc  my_allocate.inc  tlock_c.inc  vectorize.inc
starter/source/airbag/: Connectivity.cpp  c_fvbag.F  facepoly.F  fvbric.F  fvbric0.F  fvbric01.F  fvbric1.F  fvbric2.F  fvbric3.F  fvelarea.F  fvelinte.F  fvelprint.F  fvelsurf.F  fvinject.F  fvinjectint.F  fvinjnormal.F  fvlength.F  fvmbag1.F  fvmesh.F  fvmesh0.F  fvthsurf.F  fvventhole.F  fvventholeint.F  fvvolu.F  gpolcut.F  hm_read_leak.F  hm_read_monvol_type1.F  hm_read_monvol_type10.F  hm_read_monvol_type11.F  hm_read_monvol_type2.F  hm_read_monvol_type3.F  hm_read_monvol_type4.F  hm_read_monvol_type5.F  hm_read_monvol_type6.F  horipoly.F  (+12 more)
starter/stub/: fvmbags_stub.F  ini_inimap2d.F
(+10728 files in other folders)
